# jarvis

./: .gitattributes  .gitignore  CLAUDE.md  pyproject.toml  requirements.txt
config/: config.example.yaml
docs/: JARVIS_CONTEXT.md
docs/superpowers/plans/: 2026-06-18-web-ui.md
docs/superpowers/specs/: 2026-06-18-jarvis-web-ui-design.md
scripts/: healthcheck.py
src/jarvis/: brain.py  orchestrator.py  stt.py
src/jarvis/memory/: store.py
src/jarvis/memory/providers/: __init__.py
src/jarvis/web/: __main__.py  api.py
tests/web/: conftest.py  test_api.py
web/: package-lock.json  package.json  tailwind.config.js  vite.config.ts
web/src/: App.tsx  index.css
web/src/components/: ChatInput.tsx  Message.tsx  Orb.tsx  ProjectSidebar.tsx  StatusCard.tsx
web/src/hooks/: useChat.ts  useProjects.ts  useStatus.ts
web/src/lib/: api.ts
web/src/pages/: Chat.tsx  Home.tsx
